# Practica_C-

./: CMakeLists.txt  main.cpp
